edit font size of product name

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -3222,6 +3222,7 @@ $color-blankstate-background: rgba($color-body-text, 0.1);
 
 .product-single__title {
   margin-bottom: 0.5rem;
+  font-size: 1em;
 }
 
 .product__price,
