hide product thumb nails in the product page

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -3393,6 +3393,91 @@ $color-blankstate-background: rgba($color-body-text, 0.1);
 }
 
 /*================ Product Images ================*/
+a[data-thumbnail-id="5823400444004"] {
+  display: none;
+}
+
+a[data-thumbnail-id="5823569297508"] {
+  display: none;
+}
+
+a[data-thumbnail-id="5823578898532"] {
+  display: none;
+}
+
+a[data-thumbnail-id="5823586631780"] {
+  display: none;
+}
+
+a[data-thumbnail-id="5823597805668"] {
+  display: none;
+}
+
+a[data-thumbnail-id="5823607865444"] {
+  display: none;
+}
+
+a[data-thumbnail-id="5823620710500"] {
+  display: none;
+}
+
+/*================ 500ml start ================*/
+a[data-thumbnail-id="5823641485412"] {
+  display: none;
+}
+
+a[data-thumbnail-id="5823650791524"] {
+  display: none;
+}
+
+a[data-thumbnail-id="5823660621924"] {
+  display: none;
+}
+
+a[data-thumbnail-id="5823668748388"] {
+  display: none;
+}
+
+a[data-thumbnail-id="5823677464676"] {
+  display: none;
+}
+
+a[data-thumbnail-id="5823686738020"] {
+  display: none;
+}
+
+a[data-thumbnail-id="5823694078052"] {
+  display: none;
+}
+/*================ 500ml end ================*/
+
+a[data-thumbnail-id="5823702171748"] {
+  display: none;
+}
+
+a[data-thumbnail-id="5823709413476"] {
+  display: none;
+}
+
+a[data-thumbnail-id="5823723110500"] {
+  display: none;
+}
+
+a[data-thumbnail-id="5823730450532"] {
+  display: none;
+}
+
+a[data-thumbnail-id="5823744278628"] {
+  display: none;
+}
+
+a[data-thumbnail-id="5823752536164"] {
+  display: none;
+}
+
+a[data-thumbnail-id="5823760105572"] {
+  display: none;
+}
 
 .product-single__thumbnail {
   display: block;
